# AI_anxiety

./: .gitignore  ReadMe.md
2. Data Analysis Code/: 1. Web crawling .ipynb  2. Cleaning.ipynb  3. Sentiment Analysis.ipynb  5. Word-to-vector.ipynb  Sentiment_per_link_data.csv
3. Physical Output Code/: Servo_with_Python.py
Design and Process Documentation/: Project_Documentation.indd
Design and Process Documentation/Data Analysis/: 1. Web crawling .ipynb  2. Cleaning.ipynb  3. Sentiment Analysis.ipynb  Cleaned_data.csv  Crawl_final_links.csv  Untitled.ipynb
Design and Process Documentation/Physical Output/: Servo_with_Python.py  pyproject.toml
Design and Process Documentation/Physical Output/Servo_testing/: Servo_testing.ino
Resources/: Project Resources.txt
