[tool.poetry]
name = "physical output"
version = "0.1.0"
description = "Physical Output dependencies"
authors = ["Diana Galindo <dianamilena24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
